<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="tei.epp.kseritts.GameActivity" >

    <TextView
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/description"
        android:src="@drawable/b1fv" />

    <TextView
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atHand" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />

        <ImageView
            android:id="@+id/ImageViewCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <ImageView
            android:id="@+id/ImageViewCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />

        <ImageView
            android:id="@+id/imageViewCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />

        <ImageView
            android:id="@+id/ImageViewCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five" />

        <ImageView
            android:id="@+id/ImageViewCard5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />

        <TextView
            style="@style/myTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six" />

        <ImageView
            android:id="@+id/imageViewCard6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/b1fv" />
    </LinearLayout>

    <TextView
        android:id="@+id/pointsTextview"
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/btnSpeak"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="false"
        android:background="@drawable/ico_mic"
        android:contentDescription="@string/description" />

    <TextView
        style="@style/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickOnMicAndSpeak" />

</LinearLayout>