<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="tei.epp.kseritts.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/myTextView"
        android:text="@string/checkIPandPORT"
        android:paddingBottom="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        style="@style/myTextView"
            android:text="@string/ip" />

        <EditText
            android:id="@+id/ipEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="number"
            android:text="@string/ipExample" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myTextView"
            android:text="@string/port" />

        <EditText
            android:id="@+id/portEditText"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            android:text="@string/portExample" />

    </LinearLayout>

    <Button
        android:id="@+id/checkIpAndPortBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/check"
        android:textColor="@color/white"
        android:onClick="checkIpAndPort" />

</LinearLayout>
